--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -2,33 +2,33 @@
 *,
 *::before,
 *::after {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* 2. Remove default margin */
 * {
-	margin: 0;
+  margin: 0;
 }
 
 div[tabindex="-1"]:focus {
-	outline: none;
+  outline: none;
 }
 
 /* 3. Allow percentage-based heights in the application */
 html,
 body,
 #root {
-	overflow-x: hidden;
-	height: 100%;
+  overflow-x: hidden;
+  height: 100%;
 }
 
 /* Typographic tweaks!
   4. Add accessible line-height
   5. Improve text rendering */
 body {
-	line-height: 1;
-	-webkit-font-smoothing: subpixel-antialiased;
-	-moz-font-smoothing: auto;
+  line-height: 1;
+  -webkit-font-smoothing: subpixel-antialiased;
+  -moz-font-smoothing: auto;
 }
 
 /* 6. Improve media defaults */
@@ -37,9 +37,9 @@ picture,
 video,
 canvas,
 svg {
-	display: block;
-	object-fit: cover;
-	/* max-width: 100%; */
+  display: block;
+  object-fit: cover;
+  /* max-width: 100%; */
 }
 
 /* 7. Remove built-in form typography styles */
@@ -47,7 +47,8 @@ input,
 button,
 textarea,
 select {
-	font: inherit;
+  font: inherit;
+  text-align: start;
 }
 
 /* 8. Avoid text overflows */
@@ -58,22 +59,28 @@ h3,
 h4,
 h5,
 h6 {
-	overflow-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 /* 9. Create a root stacking context */
 #root,
 #__next {
-	isolation: isolate;
+  isolation: isolate;
 }
 
 /* 10. inherit color for links */
 a {
-	text-decoration: none;
-	color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
-/* 11. Remove padding for ul */
+/* 11. Remove padding and markers for ul */
 ul {
-	padding-inline-start: 0;
+  padding-inline-start: 0;
+  margin: 0;
+}
+
+/* remove menu padding */
+menu {
+  padding: 0;
 }
